--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Memory Usage Extension",
-  "description": "Display memory usage for Chrome tabs",
+  "name": "Extension Template",
+  "description": "Provides the necessary files to create a browser extension",
   "version": "1.0",
   "action": {
     "default_popup": "index.html"
-  },
-  "permissions": ["system.memory"]
+  }
 }
